--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,6 @@
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  /* color: var(--foreground); */
   font-family: Arial, Helvetica, sans-serif;
 }
